# beeb

./: .gitignore  Makefile  README.md  pyproject.toml  run.py
src/: application.py  database.py  dependencies.py  exceptions.py  main.py
src/auth/: dependencies.py  exceptions.py  models.py  routes.py  schemas.py  utils.py
src/migrations/: 0001_user.sql
src/repositories/: user.py
src/templates/: base.html
src/templates/auth/: login.html
tests/: conftest.py  test_main.py
tests/test_auth/: conftest.py  test_routes.py  test_utils.py
tests/test_budget/: conftest.py  test_db.py
tests/test_repositories/: conftest.py  test_user.py
